@@ -3,6 +3,9 @@
 
   14 Jan 2007; Roy Marples <uberlord@gentoo.org>:
 
+    Change from using symlinks to real files so we can test mtimes
+    in svc_in_control, #154670.
+
     Fix ip6 routes when iproute2 isn't installed, #161959.
 
     Allow the setting of a global metric, #161822.
